--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
-        "bootstrap": "^5.1.3"
+        "bootstrap": "^5.1.3",
+        "vue-the-mask": "^0.11.1"
     }
 }
