--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=f887555cb726a04c31c62d4be98c4f47",
+    "/css/app.css": "/css/app.css?id=b80189ff975af012c1618dd825b3dc2a"
 }
